--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
+    "next": "15.5.6",
+    "phaser": "^3.90.0",
+    "phaser3-rex-plugins": "^1.80.16",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.6"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4"
   }
 }
